--- a/vignettes/dasper.Rmd
+++ b/vignettes/dasper.Rmd
@@ -182,5 +182,5 @@ Citations made with `r CRANpkg("knitcitations")` `r citep(bib[["knitcitations"]]
 
 ```{r vignetteBiblio, results = "asis", echo = FALSE, warning = FALSE, message = FALSE}
 ## Print bibliography
-bibliography()
+knitcitations::bibliography()
 ```
