--- a/vignettes/dasper.Rmd
+++ b/vignettes/dasper.Rmd
@@ -66,7 +66,7 @@ if (!requireNamespace("BiocManager", quietly = TRUE)) {
     install.packages("BiocManager")
 }
 
-BiocManager::install("dasper")
+BiocManager::install("dzhang32/dasper")
 
 ## Check that you have a valid Bioconductor installation
 BiocManager::valid()
@@ -74,9 +74,9 @@ BiocManager::valid()
 
 ## Required knowledge
 
-The expected input of `r Biocpkg("dasper")` are junctions reads (outputted from an aligner such as [STAR](https://github.com/alexdobin/STAR)) and coverage in the form of BigWig files (which can be generated from BAM files using [RSeQC](http://rseqc.sourceforge.net/#bam2wig-py).`r Biocpkg("dasper")` is based on many other packages and in particular in those that have implemented the infrastructure needed for dealing with RNA-seq data. The packages `r Biocpkg("SummarizedExperiment")` and `r Biocpkg("GenomicRanges")` are used throughout, therefore familiarity with these packages will greatly help in interpreting the output of `r Biocpkg("dasper")`. 
+The expected input of `r Biocpkg("dasper")` are junctions reads (directly outputted from an aligner such as [STAR](https://github.com/alexdobin/STAR) or extracted from a BAM file using [megadepth](https://github.com/LieberInstitute/megadepth)) and coverage in the form of BigWig files (which can be generated from BAM files using [megadepth](https://github.com/LieberInstitute/megadepth) or  [RSeQC](http://rseqc.sourceforge.net/#bam2wig-py).`r Biocpkg("dasper")` is based on many other packages and in particular in those that have implemented the infrastructure needed for dealing with RNA-sequencing data. The packages `r Biocpkg("SummarizedExperiment")` and `r Biocpkg("GenomicRanges")` are used throughout, therefore familiarity with these packages will greatly help in interpreting the output of `r Biocpkg("dasper")`. 
 
-If you are asking yourself the question "Where do I start using Bioconductor?" you might be interested in [this blog post](http://lcolladotor.github.io/2014/10/16/startbioc/#.VkOKbq6rRuU).
+If you are asking yourself the question "Where do I start using Bioconductor?" you might be interested in [this blog post](http://lcolladotor.github.io/2014/10/16/startbioc/#.VkOKbq6rRuU). Or if you find the structure of a `SummarizedExperiment` unclear, check out [this manual](http://master.bioconductor.org/help/course-materials/2019/BSS2019/04_Practical_CoreApproachesInBioconductor.html). 
 
 ## Asking for help
 
@@ -95,28 +95,222 @@ citation("dasper")
 
 ## Workflow
 
-```{r dasper workflow}
+```{r "dasper workflow"}
 knitr::include_graphics("dasper_workflow.png")
 ```
 
 The above workflow diagram gives a top-level overview of the core functions within `dasper` and describes the order in which they are intended to be run. This are broadly split into 4 categories: 
 
-  1. **Process junctions** - these functions are prefixed with a "junction_". They will load in your junctions to an `r Biocpkg("SummarizedExperiment")`, annotate your junctions using reference annotation, filter out junctions for those that likely originate from techinical noise and normalise your junction counts to allow for comparison between samples. 
-  2. **Process coverage** - these functions are prefixed with a "cov_". They annotate your junctions with coverage from nearby regions then normalise this coverage to allow for comparison between samples.
-  3. **Outlier detection** - to be added. 
-  4. **Sashimi plots** - to be added. 
-
+  1. **Process junctions** functions are prefixed with a "junction_". They will load in your junctions to an `r Biocpkg("SummarizedExperiment")`, annotate your junctions using reference annotation, filter out junctions for those that likely originate from techinical noise and normalise your junction counts to allow for comparison between samples. 
+  2. **Process coverage** functions are prefixed with a "coverage_". They annotate your junctions with coverage from nearby regions then normalise this coverage to allow for comparison between samples.
+  3. **Outlier detection** functions are prefixed with a "outlier_". They will use a outlier detection algorithm ([isolation forest](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.IsolationForest.html) to detect the most outlier/abnormal/aberrant junctions in terms (by default) their counts and assoicated coverage. 
+  4. **Sashimi plots** are generated using the function `plot_sashimi`. This enables you to select a gene, transcript or region of interest and plot the splicing and coverage across that region in the form of sashimi plot. 
+  
 ## Example
 
-```{r "start", message=FALSE}
-library("dasper")
+`dasper` includes wrapper functions for the 3 major analysis steps in the workflow - processing junction data, processing coverage data, then performing outlier detection. If you are familiar with `dasper` or are uninterested with the intermediates, you can go from start to finish conveniently using these wrappers. 
+
+We must first initialise the Python version and data used. `dasper` uses [reticulate](https://rstudio.github.io/reticulate/) to interface to Python from R. Specifically, `dasper` uses the `sklearn` python module to run the outlier detection functions.
+
+```{r}
+# set the python PATH to be used
+reticulate::use_python(Sys.which("python3"), required = TRUE)
 ```
 
-Edit this as you see fit =) (to be completed...)
+`dasper` requires reference annotation that either inputted as a GTF path or pre-loaded into a `TxDb` object as shown below. 
 
-Here is an example of you can cite your package inside the vignette:
+```{r}
+ref <- GenomicFeatures::makeTxDbFromGFF("ftp://ftp.ensembl.org/pub/release-100/gtf/homo_sapiens/Homo_sapiens.GRCh38.100.gtf.gz")
+```
 
-* `r Biocpkg("dasper")` `r citep(bib[["dasper"]])`
+Junctions and BigWig files are the required input to `dasper`. For the purpose of this vignette we will obtain paths to the BigWig files of the GTEx v6 data publicly hosted by [recount2](https://jhubiostatistics.shinyapps.io/recount/). In reality, you should use the BigWig files that correspond to the same samples as those your junction data originate from. 
+
+```{r}
+
+# Obtain the urls to the remotely hosted GTEx BigWig files
+bw_paths <- recount::download_study(project = "SRP012682", 
+                                    type = "samples", 
+                                    download = FALSE)
+
+bw_paths <- bw_paths[1:5]
+bw_paths
+
+```
+
+A set of example junctions that are included within `dasper`. 
+
+```{r}
+
+library(dasper)
+
+junctions_example
+
+```
+
+The GTEx BigWigs have their chromosomes prefixed with a "chr". For the purpose of this example, we have to make sure the junction and reference data have the same chromosome format. 
+
+```{r}
+
+# convert seqlevels to match the BigWig
+GenomeInfoDb::seqlevels(junctions_example) <- paste0("chr", GenomeInfoDb::seqlevels(junctions_example))
+GenomeInfoDb::seqlevels(ref) <- paste0("chr", GenomeInfoDb::seqlevels(ref))
+
+```
+
+Now we can run the 3 wrapper functions (`junction_process`, `coverage_process` and `outlier_process`) on the example data intialised above. They are designed to be compatible with the `tidyverse` pipe and the time-limiting steps of this analysis can be parallelised using `r Biocpkg("BiocParallel")` as demonstrated. The returned `outlier_scores` object describes how aberrant each gene in each sample looks in terms of splicing. These are ranked in the `rank` column with 1 being the most aberrant looking gene. The specific junctions that look the most aberrant for each gene can be found in the `junctions` column.
+
+```{r "dasper quick start", message=FALSE}
+
+library(magrittr)
+
+outlier_scores <-
+    junction_process(junctions_example, ref) %>%
+    coverage_process(ref,
+        coverage_paths_case = bw_paths[1:2],
+        coverage_paths_control = bw_paths[3:5],
+        coverage_chr_control = "chr", 
+        bp_param = BiocParallel::MulticoreParam(5)
+    ) %>%
+    outlier_process(bp_param = BiocParallel::MulticoreParam(5))
+
+head(outlier_scores)
+
+```
+
+# Comprehensive `dasper` guide
+
+Below are the details of the 
+
+## Junction processing
+
+The first step is to load in your patient junctions using `junction_load`. This expects as input paths to junction files in the format outputted by `STAR`. If your junctions are in a different format you can accomodate this by adjusting the `load_func` argument. This will return junctions as a `SummarizedExperiment` object. 
+
+Additionally, you can choose to add a set of control junctions from GTEx to compare the patient junctions too. These are made publicly available through the [recount2](https://jhubiostatistics.shinyapps.io/recount/). In this example, we add the GTEx junctions from the fibroblast tissue. If you choose to do this, we would recommend matching the control tissue to the tissue from which your patient RNA-seq data was derived. 
+
+```{r "junction_load"}
+
+junctions_example_1_path <- system.file("extdata", "junctions_example_1.txt", package = "dasper", mustWork = TRUE)
+junctions_example_2_path <- system.file("extdata", "junctions_example_2.txt", package = "dasper", mustWork = TRUE)
+
+# only use chromosomes 21 + 22 for vignette speed
+junctions <-
+    junction_load(
+        junction_paths = c(junctions_example_1_path, junctions_example_2_path),
+        controls = "fibroblasts",
+        chrs = c("21", "22")
+    )
+
+junctions
+```
+
+Next, we annotate our junctions using `junction_annot`. This will classify your junctions using reference annotation into the categories "annotated", "novel_acceptor", "novel_donor", "novel_combo", "novel_exon_skip", "ambig_gene" and "unannotated".
+
+```{r "junction_annot"}
+
+# take only the first 5 sample (2 cases, 3 controls)
+# to increase the speed of the vignette
+junctions <- junctions[, 1:5]
+
+# convert seqlevels to match the BigWig
+GenomeInfoDb::seqlevels(junctions) <- paste0("chr", GenomeInfoDb::seqlevels(junctions))
+
+junctions <- junction_annot(junctions, ref)
+
+SummarizedExperiment::rowData(junctions) %>% head()
+```
+
+We can then filter our junctions using `junction_filter`. You have the option of choosing to filter by count, width, type and whether junctions overlap a blacklist region. The default settings used below filter only by count and require a junction to have at least 5 reads in at least 1 sample to be kept in. 
+
+```{r, "junction_filter"}
+
+junctions <- junction_filter(junctions,
+    count_thresh = c(raw = 5),
+    n_samp = c(raw = 1)
+)
+
+junctions
+```
+
+We can then normalise our raw junctions counts into a percentage spliced in (PSI) using `junction_norm`. This will first cluster junctions by finding all other junctions that share an acceptor or donor with it. Then, calculate the PSI the number of reads supporting each junction divided by the total number of reads in it's associated cluster. 
+
+```{r, "junction_norm"}
+
+junctions <- junction_norm(junctions)
+
+# save a separate object for plotting 
+junctions_normed <- junctions
+
+tail(SummarizedExperiment::assays(junctions)[["raw"]])
+
+tail(SummarizedExperiment::assays(junctions)[["norm"]])
+```
+
+Finally, we can score out junctions by how much their counts deviate from the count distribution of the same junction in your control samples using `junction_score`. By default, this scoring using a z-score however this can be modified to a user-inputted functions by adjusting the argument `score_func`. 
+
+```{r, "junction_score"}
+
+junctions <- junction_score(junctions)
+
+```
+
+## Coverage processing
+
+We then move onto loading and normalising in the coverage across regions associated with each junction using `coverage_norm`. Namely, these are the 2 exonic regions flanking each junction and the intron inbetween. Given that there are 3 regions for each junction and you need to obtain coverage for every junction from every sample, this step can be very computationally intensive. Here, `dasper` allows parrallelisation across samples using `r Biocpkg("BiocParallel")` and uses the tool [megadepth](https://github.com/ChristopherWilks/megadepth) developed by [Chris Wilks](https://github.com/ChristopherWilks), which is significantly faster than other tools (`rtracklayer` and `pyBigWig`) for loading coverage from BigWig files (see [runtime comparison](https://github.com/LieberInstitute/megadepth/blob/master/analysis/test_megadepth_pyBigWig_rtracklayer.Rmd). 
+
+```{r}
+
+coverage <- coverage_norm(junctions, ref,
+    coverage_paths_case = bw_paths[1:2],
+    coverage_paths_control = bw_paths[3:5], 
+    bp_param = BiocParallel::MulticoreParam(5)
+)
+
+```
+
+`coverage_score` is then used to compare the coverage associated with each junction with the coverage distribution in controls. 
+
+```{r}
+
+junctions <- coverage_score(junctions, coverage)
+
+```
+
+## Outlier processing
+
+The last step in the `dasper` pipeline is to use the junction counts and coverage scores as input into an outlier detection model. This involves first using `outlier_detect` to score each junction in each sample by how aberrant it looks. 
+
+```{r}
+
+junctions <- outlier_detect(junctions, bp_param = BiocParallel::MulticoreParam(2))
+
+```
+
+Then, using `outlier_aggregate` outlier scores aggregates the outlier splicing events to a cluster level. The annotation returned by `junction_annot` is used to link each cluster to a gene and produce a useful report of all genes in a sample ranked by how abberant they look in terms of splicing. 
+
+```{r}
+
+outlier_scores <- outlier_aggregate(junctions, bp_param = BiocParallel::MulticoreParam(2))
+
+outlier_scores
+
+```
+
+## Sashimi plots
+
+In order to help further inspection of the candidate genes with abberrant splicing returned by `dasper`, we also include functions to visualise splicing across genes/transcripts/regions of interest. For example, you could visualise the most outlier gene. 
+
+```{r}
+
+# take gene of rank 1
+gene_id <- unlist(outlier_scores[["gene_id_cluster"]][3])
+
+plot_sashimi(junctions, 
+             ref, 
+             case_id = list(samp_id = "samp_1"),
+             gene_tx_id = gene_id)
+
+```
+
 
 # Reproducibility
 
